--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -2940,6 +2940,26 @@ ol {
     display: block;
 }
 
+.hero.hero-normal .hero__categories ul.hassups__not-index {
+    left: 100%;
+    top: 0;
+}
+
+.product__pagination a.active {
+    cursor: not-allowed;
+    border: none;
+    color: #ffffff;
+    background-color: #7fad39;
+}
+
+.product__pagination a.disable,
+.product__pagination a.disable:hover {
+    cursor: not-allowed;
+    border: 1px solid #b2b2b2;
+    color: #b2b2b2;
+    background-color: transparent;
+}
+
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 
 @media only screen and (min-width: 1200px) {
