--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1668,7 +1668,8 @@ ol {
 }
 
 .product__details__pic__item img {
-	min-width: 100%;
+    min-width: 100%;
+    height: 555px;
 }
 
 .product__details__pic__slider img {
@@ -1676,7 +1677,8 @@ ol {
 }
 
 .product__details__pic__slider.owl-carousel .owl-item img {
-	width: auto;
+    width: auto;
+    height: 140px;
 }
 
 .product__details__text h3 {
@@ -2958,6 +2960,10 @@ ol {
     border: 1px solid #b2b2b2;
     color: #b2b2b2;
     background-color: transparent;
+}
+
+.box-user ul {
+    width: 100%;
 }
 
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
