--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -29,6 +29,7 @@
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
 html,
 body {
@@ -634,8 +635,27 @@ ol {
 }
 
 .hero__search {
-    overflow: hidden;
     margin-bottom: 30px;
+}
+
+.hero__item.set-bg {
+    margin-top: 6em;
+}
+
+.tt-menu {
+    width: 55%;
+}
+
+.tt-dataset.tt-dataset-products-name a {
+    color: #222;
+}
+
+.tt-dataset.tt-dataset-products-name a:hover {
+    color: #7fad39;
+}
+
+.nothing-found {
+    color: #dd2222;
 }
 
 .hero__search__form {
@@ -679,7 +699,7 @@ ol {
     border: none;
     height: 48px;
     font-size: 16px;
-    color: #b2b2b2;
+    color: #222;
     padding-left: 20px;
 }
 
@@ -1146,6 +1166,10 @@ ol {
 
 .btn_search-price {
     min-width: max-content;
+}
+
+.twitter-typeahead {
+    width: 100%;
 }
 
 .price-range-wrap .price-range {
@@ -3014,6 +3038,64 @@ ol {
 
 .disappear {
     display: none;
+}
+
+.review-box {
+    width: 70%;
+    margin: auto;
+}
+
+/* start rating */
+.rating {
+  border: none;
+  float: left;
+  position: absolute;
+  left: 42%;
+}
+
+.rating > input { display: none; }
+.rating > label:before {
+  margin: 5px;
+  font-size: 2em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.rating > .half:before {
+  content: "\f089";
+  position: absolute;
+}
+
+.rating > label {
+  color: #ddd;
+ float: right;
+}
+
+.rating > input:checked ~ label,
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  }
+
+.rating > input:checked + label:hover,
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label,
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+
+/* endrating */
+
+.comments-list {
+  display:block;
+  margin-top: 100px;
+}
+.comments-list .media {
+  border-bottom: 1px solid #eee;
+  padding: 15px;
+}
+
+.media-left {
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
 }
 
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
